--- a/index.html
+++ b/index.html
@@ -106,12 +106,8 @@
           </ul>
         </div>
       </aside>
-      <section class="Timeline">
-        Timeline
-      </section>
-      <aside class="Widgets">
-        Widgets
-      </aside>
+      <section class="Timeline"></section>
+      <aside class="Widgets"></aside>
     </div>
   </body>
 </html>
